--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "m&s",
-  "name": "movies-and-series",
+  "name": "movies-search",
   "icons": [
     {
       "src": "favicon.ico",
