--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -11,16 +12,21 @@
     "@types/node": "^18.8.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.2",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "install": "^0.13.0",
+    "lodash.throttle": "^4.1.1",
     "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
+    "redux-saga": "^1.2.1",
+    "reselect": "^4.1.6",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^3.0.3"
@@ -52,6 +58,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.12",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
